--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 
 input[type=text],
 input[type=email],
-select {
+select,
+textarea {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
