--- a/style.css
+++ b/style.css
@@ -1,49 +1,54 @@
-:root{
-    --color1: #594545;
-    --color2: #815B5B;
-    --color3: #9E7676;
-    --color4: #FFF8EA;
+:root {
+  --color1: #594545;
+  --color2: #815b5b;
+  --color3: #9e7676;
+  --color4: #fff8ea;
 }
 
-input[type=text],
-input[type=email],
+input[type="text"],
+input[type="email"],
 select,
 textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid var(--color1);
-    background-color: var(--color4);
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  input[type=submit] {
-    width: 100%;
-    background-color: var(--color3);
-    color: var(--color4);
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type=submit]:hover {
-    background-color: var(--color4);
-    color: var(--color1);
-  }
-  
-  #page-title,
-  #form {
-    border-radius: 5px;
-    background-color: var(--color1);
-    padding: 20px;
-    margin-bottom: 10px;
-    color: var(--color4);
-  }
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid var(--color1);
+  background-color: var(--color4);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-  #page-title{
-    text-align: center;
-  }
+input[type="submit"] {
+  width: 100%;
+  background-color: var(--color3);
+  color: var(--color4);
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: var(--color4);
+  color: var(--color1);
+}
+
+#page-title,
+#form {
+  border-radius: 5px;
+  background-color: var(--color1);
+  padding: 20px;
+  margin-bottom: 10px;
+  color: var(--color4);
+}
+
+#page-title {
+  text-align: center;
+}
+
+#user-id-alert,
+#password-alert{
+  color: red;
+}
